--- a/variant_selection.Rmd
+++ b/variant_selection.Rmd
@@ -55,7 +55,7 @@ length(obs_eur)
 ```
 
 
-Generate outcome from covariance matrix - how long does this take?
+Generate outcome from covariance matrix
 
 ```{r}
 covmat <- GWASTools::getobj("/sbgenomics/project-files/pcrelate_kinshipMatrix_sparseDeg4_v2.RData")
@@ -64,8 +64,31 @@ samples.afr <- readRDS("/sbgenomics/project-files/strata/freeze8_samples_AfrAm_2
 samples.eur <- readRDS("/sbgenomics/project-files/strata/freeze8_samples_EurAm_2020-07-23.rds")
 ind <- which(rownames(covmat) %in% c(samples.afr, samples.eur))
 covmat <- covmat[ind,ind]
+```
+
+First we need to find the block indices for the matrix - just do this once for large matrices (needs between 8 and 30 GB of memory to calculate indices)
+
+```{r}
+blocks <- simphen:::block_indices(covmat)
+```
+
+Save matrix and blocks together
+
+```{r, eval=FALSE}
+length(blocks)
+table(sapply(blocks, length))
+save(covmat, blocks, file="/sbgenomics/workspace/covmat_blocks_AfrEur_2020-07-24.RData")
+```
+
+See how long it takes to compute outcome
+
+```{r}
+load("/sbgenomics/workspace/covmat_blocks_AfrEur_2020-07-24.RData")
+```
+
+```{r}
 varComp <- c(3,7)
-system.time(outcome <- outcome_from_covMat_blocks(covmat, varComp))
+system.time(outcome <- simphen:::outcome_from_covMat_block_indices(covmat, blocks, varComp))
 ```
 
 
