--- a/simphen/vignettes/simulate_phenotypes.Rmd
+++ b/simphen/vignettes/simulate_phenotypes.Rmd
@@ -13,12 +13,19 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE, message = FALSE)
 ```
 
+```{r}
+library(simphen)
+library(Biobase)
+library(SeqArray)
+library(SeqVarTools)
+library(GENESIS)
+```
+
 # Simulate outcome from covariance
 
 For this example we will use 1000 genomes data. We start with a covariance matrix calcuated using the GENESIS package. We found pairwise kinship with `pcrelate` and created a block diagonal matrix of kinship using `pcrelateToMatrix`. We generate a random normal outcome adjusted for covariance.
 
 ```{r}
-library(simphen)
 data("1KG_pcrelate_blockDiag_Matrix")
 varComp <- c(4, 10)
 set.seed(8)
@@ -31,26 +38,22 @@ head(outcome)
 Next we define strata using 1000 genomes super populations, and calculate variant frequency in each stratum.
 
 ```{r}
-library(SeqArray)
+data("1KG_phase3_annot")
+super.pops <- unique(annot$Super.Population)
+strata <- lapply(super.pops, function(x) annot$sample.id[annot$Super.Population %in% x])
+names(strata) <- super.pops
+
 gdsfile <- system.file("extdata", "1KG_phase3_chr1_SNVsubset.gds", package="simphen")
 gds <- seqOpen(gdsfile)
-sample.id <- seqGetData(gds, "sample.id")
-pops <- seqGetData(gds, "sample.annotation/Population")
-super.pops <- list("EAS"=c("CHB", "JPT", "CHS", "CDX", "KHV"),
-                   "EUR"=c("CEU", "TSI", "FIN", "GBR", "IBS"),
-                   "AFR"=c("YRI", "LWK", "GWD", "MSL", "ESN", "ASW", "ACB"),
-                   "AMR"=c("MXL", "PUR", "CLM", "PEL"),
-                   "SAS"=c("GIH", "PJL", "BEB", "STU", "ITU"))
-strata <- lapply(super.pops, function(x) sample.id[pops %in% x])
 
 # alternate allele frequency
 freq <- do.call(cbind, lapply(strata, function(x) {
     seqSetFilter(gds, sample.id=x, verbose=FALSE)
     seqAlleleFreq(gds, ref.allele=1)
 }))
+
 seqResetFilter(gds, verbose=FALSE)
 ```
-
 
 ```{r}
 # select variants in AFR but not EUR
@@ -70,11 +73,10 @@ not the same as in the GDS file. Re-order the outcome vector to match
 the genotypes.
 
 ```{r}
+sample.id <- seqGetData(gds, "sample.id")
 outcome.gdsord <- outcome[sample.id]
 head(outcome.gdsord)
 ```
-
-
 
 ```{r}
 seqSetFilter(gds, variant.sel=var_afr[1], verbose=FALSE)
@@ -87,10 +89,8 @@ outcome.eff <- outcome.gdsord + eff$Gbeta
 Test association
 
 ```{r}
-library(Biobase)
-library(SeqVarTools)
-library(GENESIS)
-dat <- AnnotatedDataFrame(data.frame(sample.id, outcome=outcome.eff, stringsAsFactors=FALSE))
+dat <- annot
+dat$outcome <- outcome.eff
 nullmod <- fitNullModel(dat, outcome="outcome", cov.mat=blockDiagMatrix1KG, 
                         verbose=FALSE)
 seqData <- SeqVarData(gds, sampleData=dat)
@@ -108,83 +108,37 @@ assoc_afr <- assocTestSingle(iterator, nullmod_afr, verbose=FALSE)
 assoc_afr
 ```
 
-Convenience function to add effect and test in one step.
+Convenience function to add effect by strata and test in one step. We will consider only two groups for simplicity.
 
 ```{r}
 dat$outcome <- outcome.gdsord
-variant_assoc(variant.sel=var_afr[1], beta=1.3, varComp=varComp, 
-              gdsobj=gds, dat=dat, outcome="outcome", 
-              cov.mat=blockDiagMatrix1KG)
+geno <- variant_genotypes(gds, variant.sel=var_afr[1])
+strata2 <- strata[c("AFR", "EUR")]
+beta <- list(AFR=1.33, EUR=1.33)
+variant_assoc(geno, beta=beta, varComp=varComp, dat=dat, outcome="outcome", 
+              cov.mat=blockDiagMatrix1KG, strata=strata2, covars="Population")
 ```
 
-```{r}
-dat.afr <- dat[dat$sample.id %in% strata[["AFR"]],]
-variant_assoc(variant.sel=var_afr[1], beta=1.3, varComp=varComp, 
-              gdsobj=gds, dat=dat.afr, outcome="outcome", 
-              cov.mat=blockDiagMatrix1KG)
-```
 
 ## Add an effect common in both strata - specify effect size
 
 ```{r}
-variant_assoc(variant.sel=var_both[4], beta=1.5, varComp=varComp, 
-              gdsobj=gds, dat=dat, outcome="outcome", 
-              cov.mat=blockDiagMatrix1KG)
+geno <- variant_genotypes(gds, variant.sel=var_both[4])
+beta <- list(AFR=1.3, EUR=1.3)
+variant_assoc(geno, beta=beta, varComp=varComp, dat=dat, outcome="outcome", 
+              cov.mat=blockDiagMatrix1KG, strata=strata2, covars="Population")
 ```
 
-
-```{r}
-# test with only AFR samples
-variant_assoc(variant.sel=var_both[4], beta=1.5, varComp=varComp, 
-              gdsobj=gds, dat=dat.afr, outcome="outcome", 
-              cov.mat=blockDiagMatrix1KG)
-```
 
 ## Add an effect different across strata
 
 ```{r}
-seqSetFilter(gds, variant.sel=var_both[4], verbose=FALSE)
-geno <- as.vector(seqGetData(gds, "$dosage_alt"))
-
-afr <- sample.id %in% strata[["AFR"]]
-eff.afr <- variant_effect(geno[afr], beta=1.2, varComp=varComp)
-power(N=sum(afr), h2=eff.afr$h2) 
-outcome.eff.afr <- outcome.gdsord[afr] + eff.afr$Gbeta
-
-eur <- sample.id %in% strata[["EUR"]]
-eff.eur <- variant_effect(geno[eur], beta=1.5, varComp=varComp)
-power(N=sum(eur), h2=eff.eur$h2) 
-outcome.eff.eur <- outcome.gdsord[eur] + eff.eur$Gbeta
+geno <- variant_genotypes(gds, variant.sel=var_both[4])
+beta <- list(AFR=1.5, EUR=1.3)
+variant_assoc(geno, beta=beta, varComp=varComp, dat=dat, outcome="outcome", 
+              cov.mat=blockDiagMatrix1KG, strata=strata2, covars="Population")
 ```
 
-```{r}
-dat <- AnnotatedDataFrame(data.frame(sample.id, outcome=NA, stringsAsFactors=FALSE))
-dat$outcome[afr] <- outcome.eff.afr
-dat$outcome[eur] <- outcome.eff.eur
-nullmod <- fitNullModel(dat, outcome="outcome", cov.mat=blockDiagMatrix1KG, 
-                        verbose=FALSE)
-
-seqData <- SeqVarData(gds, sampleData=dat)
-iterator <- SeqVarBlockIterator(seqData, verbose=FALSE)
-assoc <- assocTestSingle(iterator, nullmod, verbose=FALSE)
-assoc
-```
-
-```{r}
-resetIterator(iterator, verbose=FALSE)
-nullmod_afr <- fitNullModel(dat, outcome="outcome", cov.mat=blockDiagMatrix1KG,
-                            sample.id=strata[["AFR"]], verbose=FALSE)
-assoc_afr <- assocTestSingle(iterator, nullmod_afr, verbose=FALSE)
-assoc_afr
-```
-
-```{r}
-resetIterator(iterator, verbose=FALSE)
-nullmod_eur <- fitNullModel(dat, outcome="outcome", cov.mat=blockDiagMatrix1KG,
-                            sample.id=strata[["EUR"]], verbose=FALSE)
-assoc_eur <- assocTestSingle(iterator, nullmod_eur, verbose=FALSE)
-assoc_eur
-```
 
 
 # Use LD pruning to select independent variants
