--- a/simphen/vignettes/simulate_phenotypes.Rmd
+++ b/simphen/vignettes/simulate_phenotypes.Rmd
@@ -93,7 +93,7 @@ Test association
 dat <- annot
 dat$outcome <- outcome.eff
 nullmod <- fitNullModel(dat, outcome="outcome", cov.mat=blockDiagMatrix1KG, 
-                        verbose=FALSE)
+                        covars="Population", verbose=FALSE)
 seqData <- SeqVarData(gds, sampleData=dat)
 iterator <- SeqVarBlockIterator(seqData, verbose=FALSE)
 assoc <- assocTestSingle(iterator, nullmod, verbose=FALSE)
@@ -104,7 +104,7 @@ assoc
 # test with only AFR samples
 resetIterator(iterator, verbose=FALSE)
 nullmod_afr <- fitNullModel(dat, outcome="outcome", cov.mat=blockDiagMatrix1KG,
-                            sample.id=strata[["AFR"]], verbose=FALSE)
+                            covars="Population", sample.id=strata[["AFR"]], verbose=FALSE)
 assoc_afr <- assocTestSingle(iterator, nullmod_afr, verbose=FALSE)
 assoc_afr
 ```
