--- a/simphen/vignettes/simulate_phenotypes.Rmd
+++ b/simphen/vignettes/simulate_phenotypes.Rmd
@@ -151,21 +151,8 @@ Prune first in pooled sample with MAF threshold 0.01, then in each population se
 ```{r}
 seqSetFilter(gds, verbose=FALSE)
 # use a high ld.threshold only because the variant set is so small
-set.seed(7)
-pruned.all <- snpgdsLDpruning(gds, sample.id=unlist(strata2),
-                              maf=0.01, method="corr", ld.threshold=0.5)
-pruned.all <- unlist(pruned.all, use.names=FALSE)
-
-set.seed(71)
-pruned.afr <- snpgdsLDpruning(gds, sample.id=strata2[["AFR"]], snp.id=pruned.all,
-                              remove.monosnp=FALSE, method="corr", ld.threshold=0.5)
-pruned.afr <- unlist(pruned.afr, use.names=FALSE)
-
-set.seed(72)
-pruned.eur <- snpgdsLDpruning(gds, sample.id=strata2[["EUR"]], snp.id=pruned.afr,
-                              remove.monosnp=FALSE, method="corr", ld.threshold=0.5)
-pruned <- unlist(pruned.eur, use.names=FALSE)
-length(pruned)
+pruned <- ldprune_strata(gds, strata2, maf=0.01, ld.threshold=0.5,
+                         seed=list(all=7, AFR=71, EUR=72))
 ```
 
 Add effects from first 5 pruned variants
