--- a/variant_selection.Rmd
+++ b/variant_selection.Rmd
@@ -195,3 +195,11 @@ chk <- inner_join(select(v2, variant.id, group, Est.comb=Est),
 chk
 saveRDS(chk, file="/sbgenomics/output-files/samefreq_assoc_test_10pruned_indiv_comb_diff_2020-11-13.rds")
 ```
+
+Save some files to use in scripts
+
+```{r}
+saveRDS(strata, file="/sbgenomics/output-files/freeze8_strata_afr_eur.rds")
+dat$outcome <- NULL
+saveRDS(dat, file="/sbgenomics/output-files/freeze8_AnnotatedDataFrame_afr_eur_pcs.rds")
+```
