--- a/variant_selection.Rmd
+++ b/variant_selection.Rmd
@@ -295,3 +295,24 @@ for (c in 1:22) {
   unlink(paste0("/sbgenomics/output-files/afr_unobs_eur_common_v1_chr", c, ".rds"))
 }
 ```
+
+Save only variant.id in rds file
+
+```{r}
+for (c in 1:22) {
+  # Common in Afr, rare in Eur
+  sel <- readRDS(paste0("/sbgenomics/project-files/afr_common_eur_rare_v1_chr", c, ".rds"))
+  var <- sel$variant.id
+  saveRDS(var, file=paste0("/sbgenomics/output-files/afr_common_eur_rare_v1_variant_id_chr", c, ".rds"))
+  
+  # Common in Eur, rare in Afr
+  sel <- readRDS(paste0("/sbgenomics/project-files/afr_rare_eur_common_v1_chr", c, ".rds"))
+  var <- sel$variant.id
+  saveRDS(var, file=paste0("/sbgenomics/output-files/afr_rare_eur_common_v1_variant_id_chr", c, ".rds"))
+  
+  # Common in Afr, unobs in Eur
+  sel <- readRDS(paste0("/sbgenomics/project-files/afr_common_eur_unobs_v1_chr", c, ".rds"))
+  var <- sel$variant.id
+  saveRDS(var, file=paste0("/sbgenomics/output-files/afr_common_eur_unobs_v1_variant_id_chr", c, ".rds"))
+}
+```
