--- a/variant_selection.Rmd
+++ b/variant_selection.Rmd
@@ -316,3 +316,60 @@ for (c in 1:22) {
   saveRDS(var, file=paste0("/sbgenomics/output-files/afr_common_eur_unobs_v1_variant_id_chr", c, ".rds"))
 }
 ```
+
+
+# Select variants rare in afr and unobserved in eur
+
+```{r}
+for (c in 1:22) {
+  freq <- readRDS(paste0("/sbgenomics/project-files/freeze8_allele_freq/freeze8_AfrAm_EurAm_allele_freq_chr", c, ".rds"))
+
+  # Rare in Afr, unobs in Eur
+  sel <- freq %>%
+    filter(freq.afr < 0.05, freq.eur < 0.0005,
+           freq.afr > 0.01)
+  print(nrow(sel))
+  saveRDS(sel, file=paste0("/sbgenomics/output-files/afr_rare_eur_unobs_v1_chr", c, ".rds"))
+  
+  var <- sel$variant.id
+  saveRDS(var, file=paste0("/sbgenomics/output-files/afr_rare_eur_unobs_v1_variant_id_chr", c, ".rds"))
+}
+```
+
+
+# Select variants rare in afr and unobserved in eur
+
+```{r}
+for (c in 1:22) {
+  freq <- readRDS(paste0("/sbgenomics/project-files/freeze8_allele_freq/freeze8_AfrAm_EurAm_allele_freq_chr", c, ".rds"))
+
+  # Rare in Afr, unobs in Eur
+  sel <- freq %>%
+    filter(freq.afr < 0.05, freq.eur < 0.0005,
+           freq.afr > 0.01)
+  print(nrow(sel))
+  saveRDS(sel, file=paste0("/sbgenomics/output-files/afr_rare_eur_unobs_v1_chr", c, ".rds"))
+  
+  var <- sel$variant.id
+  saveRDS(var, file=paste0("/sbgenomics/output-files/afr_rare_eur_unobs_v1_variant_id_chr", c, ".rds"))
+}
+```
+
+
+# Select variants unobserved in afr and rare in eur
+
+```{r}
+for (c in 1:22) {
+  freq <- readRDS(paste0("/sbgenomics/project-files/freeze8_allele_freq/freeze8_AfrAm_EurAm_allele_freq_chr", c, ".rds"))
+
+  # Rare in Afr, unobs in Eur
+  sel <- freq %>%
+    filter(freq.eur < 0.05, freq.afr < 0.0005,
+           freq.eur > 0.01)
+  print(nrow(sel))
+  saveRDS(sel, file=paste0("/sbgenomics/output-files/afr_unobs_eur_rare_v1_chr", c, ".rds"))
+  
+  var <- sel$variant.id
+  saveRDS(var, file=paste0("/sbgenomics/output-files/afr_unobs_eur_rare_v1_variant_id_chr", c, ".rds"))
+}
+```
